@@ -14,6 +14,7 @@ Lib/
   generic wrapper arguments *args,**kwargs
 * LDIFParser.parse_change_records() now correctly calls
   LDIFParser.handle_change_modify()
+* Corrected ldap.controls.pwdpolicy.__all__
 
 Doc/
 * Started missing docs for sub-module ldap.sasl.
@@ -1215,4 +1216,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.362 2015/10/24 15:50:00 stroeder Exp $
+$Id: CHANGES,v 1.363 2015/10/24 15:55:07 stroeder Exp $
